--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ uvicorn = "^0.23.0"
 elasticsearch = "^8.10.0"
 confluent-kafka = "^2.3.0"
 pydantic = "^2.4.0"
+pydantic-settings = "^2.0.0"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 python-multipart = "^0.0.6"
 sqlalchemy = "^2.0.0"
@@ -31,10 +32,25 @@ black = "^23.9.0"
 isort = "^5.12.0"
 flake8 = "^6.1.0"
 mypy = "^1.5.0"
+httpx = "^0.24.0"
+pytest-asyncio = "^0.21.0"
+pytest-cov = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = "test_*.py"
+python_classes = "Test*"
+python_functions = "test_*"
+addopts = "-v --tb=short"
+log_cli = true
+log_cli_level = "INFO"
+pythonpath = [
+    "."
+]
 
 [tool.black]
 line-length = 88
