--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,21 @@ KAFKA_SECURITY_PROTOCOL=PLAINTEXT  # PLAINTEXT, SASL_PLAINTEXT, SASL_SSL, SSL
 # KAFKA_SASL_MECHANISM=PLAIN  # PLAIN, SCRAM-SHA-256, SCRAM-SHA-512
 # KAFKA_SASL_USERNAME=user
 # KAFKA_SASL_PASSWORD=password
+
+# Redis Configuration
+REDIS_URL=redis://localhost:6379
+REDIS_MAX_CONNECTIONS=10
+
+# Authentication Settings
+JWT_SECRET_KEY=your-secret-key-here  # Change this in production!
+JWT_ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+# Rate Limiting
+RATE_LIMIT_DEFAULT_TIMES=100
+RATE_LIMIT_DEFAULT_SECONDS=60
+RATE_LIMIT_BATCH_TIMES=10
+RATE_LIMIT_BATCH_SECONDS=60
 # KAFKA_SSL_CAFILE=/path/to/ca.pem
 # KAFKA_SSL_CERTFILE=/path/to/cert.pem
 # KAFKA_SSL_KEYFILE=/path/to/key.pem
