--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,8 @@ pytest>=7.4.0
 httpx>=0.24.0
 pytest-asyncio>=0.21.0
 pytest-cov>=4.1.0
+fastapi-limiter>=0.1.5
+redis>=5.0.0
+passlib[bcrypt]>=1.7.4
+python-jose[cryptography]>=3.3.0
+python-multipart>=0.0.6
