--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,17 @@ redis>=5.0.0
 passlib[bcrypt]>=1.7.4
 python-jose[cryptography]>=3.3.0
 python-multipart>=0.0.6
+
+# Cloud Integration Dependencies
+boto3>=1.28.0
+azure-identity>=1.14.0
+azure-monitor-query>=1.2.0
+azure-storage-blob>=12.18.0
+google-cloud-logging>=3.8.0
+google-cloud-storage>=2.13.0
+google-cloud-monitoring>=2.15.0
+
+# Security Integration Dependencies
+asyncssh>=2.14.0
+aiofiles>=23.2.0
+aiohttp>=3.9.0
