--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,24 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@nivo/circle-packing": "^0.88.0",
+    "@nivo/geo": "^0.88.0",
+    "@nivo/heatmap": "^0.88.0",
+    "@nivo/network": "^0.88.0",
+    "@nivo/pie": "^0.88.0",
+    "@react-three/drei": "^9.121.4",
+    "@react-three/fiber": "^8.17.14",
     "@tanstack/react-query": "^5.66.0",
     "@tremor/react": "^3.18.7",
     "axios": "^1.7.9",
     "date-fns": "^3.6.0",
+    "framer-motion": "^12.3.1",
     "next": "15.1.6",
     "next-auth": "^4.24.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-globe.gl": "^2.31.3",
+    "three": "^0.173.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
